# libproperty

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md
include/property/: binary.h  data.h  index_out_of_bounds_error.h  key_unknown_error.h  list.h  map.h  raw_data.h  value.h  value.hpp
scripts/: run_clang_tidy.sh
src/property/: binary.cpp  data.cpp  index_out_of_bounds_error.cpp  key_unknown_error.cpp  list.cpp  map.cpp  raw_data.cpp
test/: binary_test.cpp  list_test.cpp  map_test.cpp  value_test.cpp
